syntax = "proto2";

// CommandProfilePacketReq
message ProfileReq {
	message AskedPlayer {
		optional int32 rank = 1;
		optional string keycloak_id = 2;
	}
	required AskedPlayer asked_player = 1;
}
